Fix spacing issues

--- a/CustomRenderer/style.css
+++ b/CustomRenderer/style.css
@@ -125,7 +125,7 @@ table p {
 }
 div[class$=_thmwrapper] {
     margin-top: 1rem;
-    padding: 1rem;
+    overflow: auto;
     border-left: 0.3rem solid #ccc;
     background-color: #f5f5f5;
     margin-bottom: 1rem;
@@ -134,7 +134,11 @@ div[class$=_thmwrapper]:target {
     -webkit-animation: a 1s ease;
     animation: a 1s ease
 }
+div[class$=_thmcontent] {
+    margin: 1rem;
+}
 div[class$=_thmheading] {
+    margin: 1rem;
     font-family: "Marcellus SC";
     font-weight: 700;
     line-height: 150%;
@@ -206,9 +210,6 @@ hr {
     width: 250px;
     margin-left: auto;
     margin-right: auto;
-}
-p {
-    margin-bottom: 0;
 }
 
 /************************
